--- a/lib/src/index.html
+++ b/lib/src/index.html
@@ -41,9 +41,9 @@
           <div class="panel-body">
             <img alt="140x140" data-src="holder.js/140x140" class="img-rounded img-center" style="width: 100%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCryDzdmt_NL2k7rKo_cE-O7hIcWf0Xmtet4W8f91ArOhp1Ggd" data-holder-rendered="true">
             <br/><br/>
-            <strong>Locality</strong>: <span class="pet-locality">United States</span><br/>
-            <strong>Established Age</strong>: <span class="pet-age">3</span><br/>
-            <strong>Location</strong>: <span class="pet-location">Minnesota</span><br/><br/>
+            <strong>Locality</strong>: <span class="home-locality">United States</span><br/>
+            <strong>Established Age</strong>: <span class="home-age">3</span><br/>
+            <strong>Location</strong>: <span class="home-location">Minnesota</span><br/><br/>
             <button class="btn btn-default btn-buy" type="button" data-id="0">Buy</button>
           </div>
         </div>
